# spacex-data-engineering

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/models/: __init__.py  base.py  launches.py
app/processing/: launches.py
app/services/: aws.py  db.py  requester.py
app/sql/: cores_less_than_50_days.sql  max_core_reuse.sql
docs/: part_1_architecture_and_security.md  part_1_terraform_redshit.md  part_2_kubernetes.md  part_3_airflow.md  part_3_etl.md  setup.md
test/services/: test_aws.py  test_db.py
