[tool.poetry]
name = "spacex-de"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
black = "^24.4.2"
boto3 = "^1.34.136"
bson = "^0.5.10"
fastparquet = "^2024.5.0"
loguru = "^0.7.2"
mypy-boto3-s3 = "^1.34.89"
pandas = "^2.2.2"
pip = "^24.1.1"
psycopg2-binary = "^2.9.9"
pyarrow = "^16.1.0"
pydantic = "^2.7.4"
pydantic-core = "^2.20.0"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"
ruff = "^0.5.0"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
diagrams = "^0.23.4"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
networkx = "^3.3"
pyvis = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
preview = true

[tool.ruff]
line-length = 89
select = [
    "COM",  # flake8-commas
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "RET",  # flake8-return
    "Q",  # flake8-quotes
    "W",  # pycodestyle warnings
]
